# fastsso

./: .gitignore  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  fastsso.django.core.rst  fastsso.django.middleware.rst  fastsso.django.rst  fastsso.fsapi.core.rst  fastsso.fsapi.middleware.rst  mkdocs.yml  modules.rst
docs/_build/doctrees/: environment.pickle  fastsso.django.core.doctree  fastsso.django.doctree  fastsso.django.middleware.doctree  fastsso.doctree  fastsso.fastapi.core.doctree  fastsso.fastapi.doctree  fastsso.fastapi.middleware.doctree  fastsso.fastapi.utils.doctree  fastsso.fsapi.core.doctree  fastsso.fsapi.doctree  fastsso.fsapi.middleware.doctree  fastsso.fsapi.utils.doctree  fastsso.streamlit.doctree  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  fastsso.django.core.html  fastsso.django.html  fastsso.django.middleware.html  fastsso.fastapi.core.html  fastsso.fastapi.html  fastsso.fastapi.middleware.html  fastsso.fastapi.utils.html  fastsso.fsapi.core.html  fastsso.fsapi.html  fastsso.fsapi.middleware.html  fastsso.fsapi.utils.html  fastsso.html  fastsso.streamlit.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/docs/: index.md
docs/docs/fsapi/: module.md
fastsso/: __init__.py
fastsso/fastapi/: __init__.py  decorators.py
fastsso/fastapi/core/: __init__.py  currentuser.py
fastsso/fsapi/: __init__.py  decorators.py
tests/: .env.test  access_generator.py  fastapiapp.py
tests/fsapi/: __init__.py  currentuser_test.py  endpoints_test.py
(+34 files in other folders)
