[tool.poetry]
name = "fastsso"
version = "1.0.1a0"
description = ""
authors = ["Alexandre Meline"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.1"}
python-keycloak = "^3.3.0"
pydantic = "^2.4.2"
uvicorn = "^0.24.0.post1"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
python-dotenv = "^1.0.0"
furo = "^2023.9.10"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
